--- a/Poliradio/src/index.html
+++ b/Poliradio/src/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
-  <meta charset="utf-8" />
-  <title>Ionic App</title>
+  <meta content="text/html" charset="utf-8" />
+  <title>Poliradio</title>
 
   <base href="/" />
 
